--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,12 @@
         "symfony/http-kernel": "^6.3"
     },
     "require-dev": {
-        "phpspec/phpspec": "^7.4"
+        "phpspec/phpspec": "^7.4",
+        "infection/infection": "^0.27.0",
+        "infection/phpspec-adapter": "^0.2.1",
+        "friends-of-phpspec/phpspec-code-coverage": "^6.3",
+        "symfony/dependency-injection": "^6.3",
+        "symfony/config": "^6.3"
     },
     "license": "MIT",
     "autoload": {
