--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,56 @@
 {
-    "name": "roukmoute/sqids-bundle",
-    "description": "Integrates sqids",
-    "type": "symfony-bundle",
-    "require": {
-        "php": "^8.1",
-        "sqids/sqids": "^0.0.1",
-        "symfony/http-kernel": "^6.3"
-    },
-    "require-dev": {
-        "phpspec/phpspec": "^7.4",
-        "infection/infection": "^0.27.0",
-        "infection/phpspec-adapter": "^0.2.1",
-        "friends-of-phpspec/phpspec-code-coverage": "^6.3",
-        "symfony/dependency-injection": "^6.3",
-        "symfony/config": "^6.3"
-    },
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Roukmoute\\SqidsBundle\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "spec\\Roukmoute\\SqidsBundle\\": "spec/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Mathias STRASSER",
-            "email": "contact@roukmoute.fr"
-        }
-    ],
-    "minimum-stability": "stable",
-    "config": {
-        "allow-plugins": {
-            "phpro/grumphp": true,
-            "infection/extension-installer": true
-        }
+  "name": "roukmoute/sqids-bundle",
+  "type": "symfony-bundle",
+  "description": "Integrates sqids/sqids in a Symfony project",
+  "minimum-stability": "stable",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Mathias STRASSER",
+      "email": "contact@roukmoute.fr"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Roukmoute\\SqidsBundle\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "spec\\Roukmoute\\SqidsBundle\\": "spec/"
+    }
+  },
+  "require": {
+    "php": "^8.1",
+    "sqids/sqids": "^0.4 || ^0.5",
+    "symfony/http-foundation": "^6.3 || ^7.0 || ^8.0",
+    "symfony/http-kernel": "^6.3 || ^7.0 || ^8.0"
+  },
+  "require-dev": {
+    "friends-of-phpspec/phpspec-code-coverage": "^6.3",
+    "friends-of-phpspec/phpspec-expect": "^4.0",
+    "friendsofphp/php-cs-fixer": "^3.2",
+    "infection/infection": "^0.27.0 || ^0.29",
+    "infection/phpspec-adapter": "^0.2.1",
+    "phpmd/phpmd": "^2.10",
+    "phpspec/phpspec": "^7.4",
+    "phpstan/phpstan": "^1.1",
+    "phpstan/phpstan-symfony": "^1.0",
+    "roave/security-advisories": "dev-latest",
+    "symfony/config": "^6.3 || ^7.0 || ^8.0",
+    "symfony/dependency-injection": "^6.3 || ^7.0 || ^8.0",
+    "twig/twig": "^3.0"
+  },
+  "suggest": {
+    "twig/twig": "Allows to use sqids in Twig template engine."
+  },
+  "config": {
+    "allow-plugins": {
+      "infection/extension-installer": true
+    },
+    "preferred-install": {
+      "*": "dist"
+    },
+    "sort-packages": true
+  }
 }
