Remove composer.lock from version control
Libraries should not commit composer.lock as users will use their own lock file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /vendor/
+/composer.lock
 /infection.log
-/build/coverage/xml/ArgumentResolver/SqidsValueResolver.php.xml
-/build/coverage/xml/index.xml
-/build/coverage/xml/SqidsBundle.php.xml
+/build/
