--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -37,9 +37,7 @@ jobs:
           - php: '8.3'
             symfony: '^7.0'
 
-          # PHP 8.4 with Symfony 7.x
-          - php: '8.4'
-            symfony: '^7.0'
+          # Note: PHP 8.4 not tested yet due to phpspec compatibility issues
       fail-fast: false
 
     steps:
@@ -68,4 +66,4 @@ jobs:
 
       - name: Run phpspec
         run: |
-          php vendor/bin/phpspec run
+          php vendor/bin/phpspec run --no-coverage
