Fix CI: add pcov coverage and exclude spec from php-cs-fixer
- Use pcov instead of none for coverage (phpspec extension needs it)
- Exclude spec/ folder from php-cs-fixer (phpspec conventions differ)

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          coverage: none
+          coverage: pcov
           extensions: "intl, bcmath"
           php-version: "${{ matrix.php }}"
 
